--- a/src/styles/scss/Header.scss
+++ b/src/styles/scss/Header.scss
@@ -233,47 +233,10 @@
   }
 
   &__theme-icon-container {
-    position: relative;
-    @include d-flex-fd-ai-jc-g(row, center, center, 0.25rem);
-    background-color: var(--primary-text-color);
-    border: 0;
-    border-radius: var(--primary-border-radius);
-    padding: 0.125rem 0.375rem;
-    cursor: pointer;
-    transition: var(--primary-all-transitions);
-
-    @include desktop() {
-      gap: 0.375rem;
-      padding: 0.25rem 0.5rem;
-    }
-
-    &::after {
-      content: '';
-      position: absolute;
-      left: 0;
-      background-color: var(--primary-theme-color);
-      width: 1.25rem;
-      height: 1.25rem;
-      border-radius: 50%;
-      box-shadow:
-        0 0 0 0.125rem var(--primary-shadow-color),
-        0 0 0.25rem 0 var(--primary-shadow-color),
-        0 0 0.375rem 0 var(--primary-shadow-color),
-        0 0 0.5rem 0 var(--primary-shadow-color);
-      transition: var(--primary-all-transitions);
-
-      @include desktop() {
-        width: 1.625rem;
-        height: 1.625rem;
-      }
-    }
-
-    &--active::after {
-      left: 50%;
-    }
+    @include theme-icon-container;
   }
 
   &__theme-icon {
-    @include icon(var(--primary-button-text-color));
+    @include theme-icon;
   }
 }
