--- a/src/styles/scss/AuthenticationRecoverPassword.scss
+++ b/src/styles/scss/AuthenticationRecoverPassword.scss
@@ -1,6 +1,6 @@
 @import './mixins';
 
-.authentication-login {
+.authentication-recover {
   padding: 2rem 0;
 
   &__container {
@@ -8,7 +8,7 @@
     @include container;
   }
 
-  &__card-login {
+  &__card-recover {
     @include d-flex-fd-ai-jc-g(column, stretch, stretch, 2rem);
     box-shadow: 0 0 0.75rem 0.0625rem var(--secondary-shadow-color);
     max-width: 256px;
@@ -25,12 +25,12 @@
     }
   }
 
-  &__card-login-header {
+  &__card-recover-header {
     @include d-flex-fd-ai-jc-g(column, stretch, stretch, 0.5rem);
     text-align: center;
   }
 
-  &__card-login-title {
+  &__card-recover-title {
     @include text(var(--primary-text-color), 800, 2rem, var(--secondary-font-family));
 
     @include desktop() {
@@ -38,42 +38,32 @@
     }
   }
 
-  &__card-login-message {
+  &__card-recover-message {
     @include text(var(--tertiary-text-color));
   }
 
-  &__card-login-form {
-    @include d-flex-fd-ai-jc-g(column, stretch, stretch, 1.5rem);
-
-    @include desktop() {
-      @include d-grid-gtc-g(1fr 1fr, 2rem);
-    }
+  &__card-recover-form {
+    @include d-flex-fd-ai-jc-g(column, stretch, stretch, 1rem);
   }
 
-  &__card-login-input {
+  &__card-recover-input {
     @include input;
   }
 
-  &__card-login-button-container {
-    @include d-flex-fd-ai-jc-g(column, stretch, stretch, 0.5rem);
+  &__card-recover-button-container {
+    align-self: center;
+    @include d-flex-fd-ai-jc-g(row, center, stretch, 0.75rem);
+  }
+
+  &__card-recover-login {
+    @include button(var(--primary-button-color), #0050b280, var(--primary-border-radius), 0.75rem, 400, 0.625em 1.125em, var(--primary-active-button-color));
 
     @include desktop() {
-      grid-column: span 2;
-      gap: 1rem;
+      font-size: 1rem;
     }
   }
 
-  &__card-login-recover {
-    @include text(var(--tertiary-text-color));
-    text-align: center;
-    text-decoration: none;
-
-    @include desktop() {
-      font-size: 0.875rem;
-    }
-  }
-
-  &__card-login-button {
+  &__card-recover-button {
     @include button(var(--primary-button-color), #0050b280, var(--primary-border-radius), 0.75rem, 400, 0.625em 1.125em, var(--primary-active-button-color));
     align-self: center;
 
@@ -120,16 +110,17 @@
     }
   }
 
-  &__card-partner-register {
-    @include button(var(--secondary-button-color), #e302467a, var(--primary-border-radius), 0.75rem, 400, 0.625em 1.125em, var(--secondary-active-button-color));
+  &__card-partner-login {
+    @include button(var(--primary-button-color), #0050b280, var(--primary-border-radius), 0.75rem, 400, 0.625em 1.125em, var(--primary-active-button-color));
+    align-self: center;
 
     @include desktop() {
       font-size: 1rem;
     }
   }
 
-  &__card-partner-guest {
-    @include button(var(--primary-button-color), #0050b280, var(--primary-border-radius), 0.75rem, 400, 0.625em 1.125em, var(--primary-active-button-color));
+  &__card-partner-register {
+    @include button(var(--secondary-button-color), #e302467a, var(--primary-border-radius), 0.75rem, 400, 0.625em 1.125em, var(--secondary-active-button-color));
 
     @include desktop() {
       font-size: 1rem;
