--- a/src/styles/scss/AuthenticationRegister.scss
+++ b/src/styles/scss/AuthenticationRegister.scss
@@ -1,7 +1,7 @@
 @import './mixins';
 
 .authentication-register {
-  padding: var(--padding-section);
+  padding: 2rem 0;
 
   &__container {
     @include d-flex-fd-ai-jc-g(column, stretch, stretch, 1rem);
@@ -17,10 +17,11 @@
     transition: var(--primary-all-transitions);
 
     @include desktop() {
+      gap: 2.5rem;
       box-shadow: 0 0 1rem 0.125rem var(--secondary-shadow-color);
       max-width: 512px;
-      box-sizing: border-box;
       padding: 3rem;
+      box-sizing: border-box;
     }
   }
 
@@ -94,7 +95,7 @@
     @include text(var(--secondary-text-color));
   }
 
-  &__card-partner-button {
+  &__card-partner-login {
     @include button(var(--primary-button-color), #0050b280, var(--primary-border-radius), 0.75rem, 400, 0.625em 1.125em, var(--primary-active-button-color));
     align-self: center;
 
