Update _mixins.scss card-header-form-link

--- a/src/styles/scss/AuthenticationRecoverPassword.scss
+++ b/src/styles/scss/AuthenticationRecoverPassword.scss
@@ -9,20 +9,7 @@
   }
 
   &__card-recover {
-    @include d-flex-fd-ai-jc-g(column, stretch, stretch, 2rem);
-    box-shadow: 0 0 0.75rem 0.0625rem var(--secondary-shadow-color);
-    max-width: 256px;
-    margin: 0 auto;
-    padding: 2rem;
-    transition: var(--primary-all-transitions);
-
-    @include desktop() {
-      gap: 2.5rem;
-      box-shadow: 0 0 1rem 0.125rem var(--secondary-shadow-color);
-      max-width: 512px;
-      padding: 3rem;
-      box-sizing: border-box;
-    }
+    @include card-header-form-link;
   }
 
   &__card-recover-header {
@@ -73,15 +60,12 @@
   }
 
   &__card-partner {
-    @include d-flex-fd-ai-jc-g(column, stretch, stretch, 2rem);
-    max-width: 256px;
-    margin: 0 auto;
-    padding: 2rem;
+    @include card-header-form-link;
+    box-shadow: none;
 
     @include desktop() {
-      max-width: 512px;
-      box-sizing: border-box;
-      padding: 3rem;
+      gap: 2rem;
+      box-shadow: none;
     }
   }
 
