--- a/src/styles/scss/CinemasHome.scss
+++ b/src/styles/scss/CinemasHome.scss
@@ -4,14 +4,12 @@
   &__slide-container {
     position: relative;
     display: flex;
-    width: 100%;
-    height: 100vh;
-    margin: 0;
   }
 
   &__slide-image {
+    background-color: var(--primary-shadow-color);
     width: 100%;
-    height: 100%;
+    height: 100vh;
     object-fit: cover;
   }
 
@@ -84,7 +82,7 @@
   background-color: var(--secondary-theme-color);
   padding: var(--padding-section);
   transition: var(--secondary-all-transitions);
-  
+
   @include desktop() {
     @include d-flex-fd-ai-jc-g(row, center, center);
     min-height: 716px;
