--- a/src/styles/scss/CinemasHome.scss
+++ b/src/styles/scss/CinemasHome.scss
@@ -125,7 +125,6 @@
 
   &__card-container {
     position: relative;
-    background-color: var(--primary-shadow-color);
     width: 100%;
     height: 256px;
     overflow: hidden;
@@ -200,6 +199,7 @@
   }
 
   &__card-image {
+    background-color: var(--primary-shadow-color);
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -277,6 +277,7 @@
   }
 
   &__card-image {
+    width: auto;
     height: 128px;
     transition: var(--primary-all-transitions);
 
