--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+.body {
+  font-family: var(--primary-font-family);
+}
 
 .root {
   display: flex;
