--- a/src/styles/scss/Footer.scss
+++ b/src/styles/scss/Footer.scss
@@ -176,9 +176,20 @@
   padding: 1.5rem 0;
   transition: var(--secondary-all-transitions);
 
+  &--authentication {
+    padding: 1rem 0;
+    border-bottom: 0.25rem solid var(--secondary-highlight-color);
+  }
+
   @include desktop() {
     border-top: 0.375rem solid var(--secondary-highlight-color);
     padding: 1.75rem 0;
+
+    &--authentication {
+      border-top: 0.25rem solid var(--secondary-highlight-color);
+      border-bottom: 0.25rem solid var(--secondary-highlight-color);
+      padding: 1.25rem 0;
+    }
   }
 
   &__container {
