--- a/src/styles/scss/Authentication.scss
+++ b/src/styles/scss/Authentication.scss
@@ -7,4 +7,30 @@
     @include d-flex-fd-ai-jc-g(column, stretch, stretch, 1rem);
     @include container;
   }
+
+  &__card {
+    @include d-flex-fd-ai-jc-g(column, stretch, stretch, 2rem);
+    box-shadow: 0 0 0.75rem 0.0625rem var(--secondary-shadow-color);
+    max-width: 256px;
+    margin: 0 auto;
+    padding: 2rem;
+    transition: var(--primary-all-transitions);
+
+    @include desktop() {
+      gap: 2.5rem;
+      box-shadow: 0 0 1rem 0.125rem var(--secondary-shadow-color);
+      max-width: 512px;
+      padding: 3rem;
+      box-sizing: border-box;
+    }
+
+    &--partner {
+      box-shadow: none;
+
+      @include desktop() {
+        gap: 2rem;
+        box-shadow: none;
+      }
+    }
+  }
 }
