--- a/src/styles/scss/Authentication.scss
+++ b/src/styles/scss/Authentication.scss
@@ -33,4 +33,33 @@
       }
     }
   }
+
+  &__card-header {
+    @include d-flex-fd-ai-jc-g(column, stretch, stretch, 0.5rem);
+    text-align: center;
+  }
+
+  &__card-title {
+    @include text(var(--primary-text-color), 800, 2rem, var(--secondary-font-family));
+
+    @include desktop() {
+      font-size: 2.5rem;
+    }
+
+    &--partner {
+      @include text(var(--secondary-text-color), 600, 1rem, var(--secondary-font-family));
+
+      @include desktop() {
+        font-size: 1.125rem;
+      }
+    }
+  }
+
+  &__card-message {
+    @include text(var(--tertiary-text-color));
+
+    &--partner {
+      @include text(var(--secondary-text-color));
+    }
+  }
 }
