Update Authentication.scss button

--- a/src/styles/scss/Authentication.scss
+++ b/src/styles/scss/Authentication.scss
@@ -116,7 +116,7 @@
     }
   }
 
-  &__form-button-container {
+  &__button-container {
     @include d-flex-fd-ai-jc-g(row, stretch, center, 0.75rem);
 
     &--col-span-2 {
@@ -138,25 +138,18 @@
     }
   }
 
-  &__form-button {
+  &__button-primary {
     align-self: center;
-
-    &--register {
-      @include button(var(--secondary-button-color), #e302467a, var(--primary-border-radius), 0.75rem, 400, 0.625em 1.125em, var(--secondary-active-button-color));
-    }
-
-    &--login {
-      @include button(var(--primary-button-color), #0050b280, var(--primary-border-radius), 0.75rem, 400, 0.625em 1.125em, var(--primary-active-button-color));
-    }
-
+    @include button(var(--primary-button-color), #0050b280, var(--primary-border-radius), 0.75rem, 400, 0.625em 1.125em, var(--primary-active-button-color));
 
     @include desktop() {
       font-size: 1rem;
     }
   }
 
-  &__form-button-primary {
-    @include button(var(--primary-button-color), #0050b280, var(--primary-border-radius), 0.75rem, 400, 0.625em 1.125em, var(--primary-active-button-color));
+  &__button-secondary {
+    align-self: center;
+    @include button(var(--secondary-button-color), #e302467a, var(--primary-border-radius), 0.75rem, 400, 0.625em 1.125em, var(--secondary-active-button-color));
 
     @include desktop() {
       font-size: 1rem;
