--- a/src/styles/scss/Auth.scss
+++ b/src/styles/scss/Auth.scss
@@ -10,7 +10,6 @@
 
   &__card {
     @include d-flex-fd-ai-jc-g(column, stretch, stretch, 2rem);
-    box-shadow: 0 0 0.75rem 0.0625rem var(--secondary-shadow-color);
     max-width: 256px;
     margin: 0 auto;
     padding: 2rem;
@@ -18,18 +17,16 @@
 
     @include desktop() {
       gap: 2.5rem;
-      box-shadow: 0 0 1rem 0.125rem var(--secondary-shadow-color);
       max-width: 512px;
       padding: 3rem;
       box-sizing: border-box;
     }
 
-    &--partner {
-      box-shadow: none;
+    &--shadow {
+      box-shadow: 0 0 0.75rem 0.0625rem var(--secondary-shadow-color);
 
       @include desktop() {
-        gap: 2rem;
-        box-shadow: none;
+        box-shadow: 0 0 1rem 0.125rem var(--secondary-shadow-color);
       }
     }
   }
