--- a/src/styles/scss/AuthFooter.scss
+++ b/src/styles/scss/AuthFooter.scss
@@ -1,3 +1,4 @@
 .auth-footer {
-  width: 100%;
+  box-shadow: 0 0 0.75rem 0 var(--secondary-shadow-color);
+  transition: var(--secondary-all-transitions);
 }
